--- a/spering-html/home2.html
+++ b/spering-html/home2.html
@@ -74,7 +74,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+            <img src="c:\Users\acer\Downloads\saashe.img.png" alt="" />
             <span>
               The Forge
             </span>
@@ -92,10 +92,10 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="myntra.html">Myntra Products </a>
+                <a class="nav-link" href="saashe.html">Saashe Products </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="meesho.html"> Meesho Products </a>
+                <a class="nav-link" href="wardrobebymeenu.html">WardrobeByMeenuProducts </a>
               </li>
             </ul>
             <div class="user_option">
@@ -187,27 +187,27 @@
                   <div class="detail-box">
                     <h1>
                       Best Deals <br>
-                      on Myntra <br>
+                      on Saashe <br>
                     </h1>
                     <p>
-                      Find the best deals on Myntra with <i><b>The Forge</b></i>! 
+                      Find the best deals on Saashe with <i><b>The Forge</b></i>! 
                     </p>
                     <p>
                       Compare prices instantly and grab your favorite styles at the lowest rates!
                     </p>
                     <div class="btn-box">
-                      <a href="myntra.html" class="btn-1">
+                      <a href="saashe.html" class="btn-1">
                         View Deals
                       </a>
-                      <a href="https://www.myntra.com/" class="btn-2" target="_blank">
-                        Go to Myntra
+                      <a href="https://www.saashe.com/" class="btn-2" target="_blank">
+                        Go to Saashe
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
                   <div class="img-box">
-                    <img src="images/myntra.jpg" alt="">
+                    <img src="c:\Users\acer\Downloads\saashe.img.png" alt="">
                   </div>
                 </div>
               </div>
@@ -220,27 +220,27 @@
                   <div class="detail-box">
                     <h1>
                       Best Deals <br>
-                      On Meesho <br>
+                      On WardrobeByMeenu <br>
                     </h1>
                     <p>
-                      Find the best deals on Meesho with <i><b>The Forge</b></i>! 
+                      Find the best deals on WardrobeByMeenu with <i><b>The Forge</b></i>! 
                     </p>
                     <p>
                       Compare prices instantly and grab your favorite styles at the lowest rates!
                     </p>
                     <div class="btn-box">
-                      <a href="meesho.html" class="btn-1">
+                      <a href="wardrobebymeenu.html" class="btn-1">
                         View Deals
                       </a>
-                      <a href="https://www.meesho.com/" class="btn-2" target="_blank">
-                        Go to Meesho
+                      <a href="https://www.wardrobebymeenu.com/" class="btn-2" target="_blank">
+                        Go to WardrobebByMeenu
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
                   <div class="img-box">
-                    <img src="images/meesho.png" alt="">
+                    <img src="e:\Music\2024_03_30\wardrobebymeenu.image.avif" alt="">
                   </div>
                 </div>
               </div>
@@ -561,13 +561,13 @@
                   <a class="" href="about.html">About </a>
                 </li>
                 <li class="">
-                  <a class="" href="myntra.html">Myntra Products </a>
+                  <a class="" href="saashe.html">Saashe Products </a>
                 </li>
                 <li class="">
-                  <a class="" href="meesho.html">Meesho Products </a>
+                  <a class="" href="wardrobebymeenu.html">WardrobeByMeenu Products </a>
                 </li>
                 <li class="">
-                  <a class="" href="meesho.html">Compare prices </a>
+                  <a class="" href="wardrobebymeenu.html">Compare prices </a>
                 </li>
               </ul>
             </div>
@@ -577,10 +577,10 @@
               Platforms Compared
             </h5>
             <p>
-              Myntra
+             Saashe
             </p>
             <p>
-              Meesho
+              WardrobeByMeenu
             </p>
           </div>
 
