--- a/spering-html/index.html
+++ b/spering-html/index.html
@@ -49,14 +49,20 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="myntra.html">Myntra Products </a>
+                <a class="nav-link" href="Saashe.html">Saashe Products </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="meesho.html"> Meesho Products </a>
+                <a class="nav-link" href="wardrobebymeenu .html"> WardrobeByMeenu  Products </a>
               </li>
             </ul>
+            <!-- Font Awesome for icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
             <div class="user_option">
               <a href="login.html">
+                <!-- Add to Cart button with icon -->
+  <a href="compare.html" class="cart-icon ml-3">
+    <i class="fas fa-shopping-cart"></i>
+  </a>
                 <span>
                   Login
                 </span>
@@ -143,27 +149,27 @@
                   <div class="detail-box">
                     <h1>
                       Best Deals <br>
-                      on Myntra <br>
+                      on Saashe <br>
                     </h1>
                     <p>
-                      Find the best deals on Myntra with <i><b>The Forge</b></i>! 
+                      Find the best deals on Saashe with <i><b>The Forge</b></i>! 
                     </p>
                     <p>
                       Compare prices instantly and grab your favorite styles at the lowest rates!
                     </p>
                     <div class="btn-box">
-                      <a href="myntra.html" class="btn-1">
+                      <a href="saashe.html" class="btn-1">
                         View Deals
                       </a>
-                      <a href="https://www.myntra.com/" class="btn-2" target="_blank">
-                        Go to Myntra
+                      <a href="https://www.saashe.com/" class="btn-2" target="_blank">
+                        Go to Saashe
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
                   <div class="img-box">
-                    <img src="images/myntra.jpg" alt="">
+                    <img src="c:\Users\acer\Downloads\saashe.img.png" alt="">
                   </div>
                 </div>
               </div>
@@ -176,27 +182,27 @@
                   <div class="detail-box">
                     <h1>
                       Best Deals <br>
-                      On Meesho <br>
+                      On wardrobebymeenu<br>
                     </h1>
                     <p>
-                      Find the best deals on Meesho with <i><b>The Forge</b></i>! 
+                      Find the best deals on Wardrobe By Meenu with <i><b>The Forge</b></i>! 
                     </p>
                     <p>
                       Compare prices instantly and grab your favorite styles at the lowest rates!
                     </p>
                     <div class="btn-box">
-                      <a href="meesho.html" class="btn-1">
+                      <a href="wardrobebymeenu.html" class="btn-1">
                         View Deals
                       </a>
-                      <a href="https://www.meesho.com/" class="btn-2" target="_blank">
-                        Go to Meesho
+                      <a href="https://www.wardrobebymeenu.com/" class="btn-2" target="_blank">
+                        Go to Wardrobebymeenu
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
                   <div class="img-box">
-                    <img src="images/meesho.png" alt="">
+                    <img src="e:\Music\2024_03_30\wardrobebymeenu.image.avif" alt="">
                   </div>
                 </div>
               </div>
@@ -558,13 +564,13 @@
                   <a class="" href="about.html">About </a>
                 </li>
                 <li class="">
-                  <a class="" href="myntra.html">Myntra Products </a>
+                  <a class="" href="Saashe.html">Saashe Products </a>
                 </li>
                 <li class="">
-                  <a class="" href="meesho.html">Meesho Products </a>
+                  <a class="" href="WardrobeByMeenu .html">WardrobeByMeenu Products </a>
                 </li>
                 <li class="">
-                  <a class="" href="meesho.html">Compare prices </a>
+                  <a class="" href="WardrobeByMeenu .html">Compare prices </a>
                 </li>
               </ul>
             </div>
@@ -574,10 +580,10 @@
               Platforms Compared
             </h5>
             <p>
-              Myntra
+              Saashe
             </p>
             <p>
-              Meesho
+              WardrobeByMeenu 
             </p>
           </div>
 
