--- a/spering-html/compare.html
+++ b/spering-html/compare.html
@@ -87,10 +87,10 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="myntra.html">Myntra Products </a>
+                <a class="nav-link" href="saashe.html">Saashe Products </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="meesho.html"> Meesho Products </a>
+                <a class="nav-link" href="wardrobebymeenu.html">WardrobeByMeenu Products </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="compare.html"> Compare Prices </a>
@@ -135,7 +135,7 @@
           <h3 class="text-center">Myntra</h3>
           <div class="product_box">
             <div class="img-box">
-              <a href="https://www.myntra.com/skirt" target="_blank">
+              <a href="https://www.saashe.com/skirt" target="_blank">
                 <img src="images/bfs_myntra.png" alt="Black Flared Skirt">
               </a>
             </div>
@@ -274,10 +274,10 @@
                   <a class="" href="about.html">About </a>
                 </li>
                 <li class="">
-                  <a class="" href="myntra.html">Myntra Products </a>
+                  <a class="" href="saashe.html">Saashe Products </a>
                 </li>
                 <li class="">
-                  <a class="" href="meesho.html">Meesho Products </a>
+                  <a class="" href="wardrobebymeenu.html">WardrobeByMeenu Products </a>
                 </li>
                 <li class="">
                   <a class="" href="compare.html">Compare prices </a>
@@ -290,10 +290,10 @@
               Platforms Compared
             </h5>
             <p>
-              Myntra
+              Saashe
             </p>
             <p>
-              Meesho
+              WardrobeByMeenu
             </p>
           </div>
 
