--- a/spering-html/about1.html
+++ b/spering-html/about1.html
@@ -49,10 +49,10 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="myntra.html"> Myntra Products </a>
+                <a class="nav-link" href="Saashe.html"> Saashe Products </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="meesho.html"> Meesho Products </a>
+                <a class="nav-link" href="Wbymeenu.html"> WardrobeByMeenu Products </a>
               </li>
             </ul>
             <div class="user_option">
@@ -102,12 +102,20 @@
               </h2>
             </div>
             <p>
-                Welcome to The Forge—where fashion meets smart shopping! We know the struggle of browsing multiple websites to find the best price for your favorite outfits. That’s why we created The Forge, a powerful clothing price comparison platform that helps you shop smarter. We scan and compare prices across top online marketplaces like Flipkart and Meesho, ensuring you never overpay for the styles you love.  </p>
-            <p>
-                Our journey began with a simple idea: to make online fashion shopping more transparent, convenient, and cost-effective. Behind The Forge is a dedicated team of innovators— Lalithya Dev S R, Mehreen Fathima B, Nisma Reyasath, and Varsha K —working tirelessly to refine and enhance your shopping experience. With the expert guidance of our project mentor, Prof. Diana Walts, we’ve built a platform that brings real-time price updates, seamless navigation, and reliable comparisons, all in one place.  </p>
-            <p> 
-                Why waste time juggling multiple tabs when The Forge does the work for you? Start comparing, start saving, and forge your perfect wardrobe today!
-                        </p>
+              Welcome to The Forge – Smart Shopping with a Local Touch</p>
+              <p>
+                At The Forge, we believe that shopping for fashion should be both smart and impactful. Our platform makes it easy to compare prices from two premium local boutiques, Saashe and WardrobeByMeenu, ensuring you find the best deals on high-quality clothing, accessories, and footwear while actively supporting independent businesses.
+              </p>
+              <p>
+                In a world where fast fashion dominates, small boutiques often struggle to compete. That’s where we step in. By offering real-time price updates, transparent pricing, and a seamless browsing experience, we empower shoppers to make informed choices while helping local fashion brands gain visibility and thrive.
+              </p>
+              
+              <p>
+                Every purchase you make through The Forge directly supports boutique owners, allowing them to grow, continue offering unique styles, and sustain their businesses. Shopping locally no longer means missing out on great deals—it means finding quality fashion at the best prices while making a difference.
+              </p>
+              <p>
+                Compare, shop smarter, and support local fashion with The Forge today!
+              </p>
             <div class="btn-box">
               <a href="about.html" class="btn-1">
                 Read Less
@@ -168,10 +176,10 @@
                     <a class="" href="about.html">About </a>
                   </li>
                   <li class="">
-                    <a class="" href="myntra.html">Myntra Products </a>
+                    <a class="" href="Saashe.html">Saashe Products </a>
                   </li>
                   <li class="">
-                    <a class="" href="meesho.html">Meesho Products </a>
+                    <a class="" href="Wbymeenu.html">WardrobeByMeenu Products </a>
                   </li>
                   <li class="">
                     <a class="" href="meesho.html">Compare prices </a>
@@ -184,10 +192,10 @@
                 Platforms Compared
               </h5>
               <p>
-                Myntra
+                Saashe
               </p>
               <p>
-                Meesho
+                WardrobeByMeenu
               </p>
             </div>
   
