--- a/spering-html/about.html
+++ b/spering-html/about.html
@@ -102,8 +102,11 @@
               </h2>
             </div>
             <p>
-              Welcome to The Forge, your ultimate destination for smart shopping in fashion. We help you compare prices across multiple online stores, ensuring you get the best deals on clothing, accessories, and footwear. Whether you're hunting for budget-friendly finds or high-end designer pieces, our platform simplifies the search, saving you time and money. At The Forge, we believe in empowering shoppers with transparent pricing, real-time updates, and a seamless browsing experience. Forge your style without breaking the bank—start comparing today!
-            </p>
+              Welcome to The Forge – your trusted guide to smart, local fashion shopping. We help you compare prices from two top boutique websites, Saashe and WardrobeByMeenu, so you can find the best deals while supporting local businesses.
+
+With fast fashion everywhere, shopping mindfully can feel overwhelming. That’s where we come in! We make it easy to discover affordable, high-quality clothing, accessories, and shoes from independent brands. Our platform keeps pricing transparent, updates in real time, and ensures a smooth browsing experience—so you can shop confidently while backing local fashion.
+<br>
+Start comparing now and shop smarter with The Forge!</strong></p>
             <div class="btn-box">
               <a href="about1.html" class="btn-1">
                 Read More
@@ -165,10 +168,10 @@
                   <a class="" href="about.html">About </a>
                 </li>
                 <li class="">
-                  <a class="" href="myntra.html">Myntra Products </a>
+                  <a class="" href="Saashe.html">Saashe Products </a>
                 </li>
                 <li class="">
-                  <a class="" href="meesho.html">Meesho Products </a>
+                  <a class="" href="Wbymeenu.html">Wardrobebymeenu Products </a>
                 </li>
                 <li class="">
                   <a class="" href="meesho.html">Compare prices </a>
@@ -181,10 +184,10 @@
               Platforms Compared
             </h5>
             <p>
-              Myntra
+              Saashe
             </p>
             <p>
-              Meesho
+              Wardrobebymeenu
             </p>
           </div>
 
