--- a/spering-html/index.html
+++ b/spering-html/index.html
@@ -49,20 +49,14 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Saashe.html">Saashe Products </a>
+                <a class="nav-link" href="saashe.html">Saashe Products </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="wardrobebymeenu .html"> WardrobeByMeenu  Products </a>
+                <a class="nav-link" href="wardrobebymeenu.html"> WardrobeByMeenu Products </a>
               </li>
             </ul>
-            <!-- Font Awesome for icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
             <div class="user_option">
               <a href="login.html">
-                <!-- Add to Cart button with icon -->
-  <a href="compare.html" class="cart-icon ml-3">
-    <i class="fas fa-shopping-cart"></i>
-  </a>
                 <span>
                   Login
                 </span>
@@ -149,10 +143,10 @@
                   <div class="detail-box">
                     <h1>
                       Best Deals <br>
-                      on Saashe <br>
+                      on Myntra <br>
                     </h1>
                     <p>
-                      Find the best deals on Saashe with <i><b>The Forge</b></i>! 
+                      Find the best deals on Myntra with <i><b>The Forge</b></i>! 
                     </p>
                     <p>
                       Compare prices instantly and grab your favorite styles at the lowest rates!
@@ -162,7 +156,7 @@
                         View Deals
                       </a>
                       <a href="https://www.saashe.com/" class="btn-2" target="_blank">
-                        Go to Saashe
+                        Go to Myntra
                       </a>
                     </div>
                   </div>
@@ -182,10 +176,10 @@
                   <div class="detail-box">
                     <h1>
                       Best Deals <br>
-                      On wardrobebymeenu<br>
+                      On WardrobeNByMeenu <br>
                     </h1>
                     <p>
-                      Find the best deals on Wardrobe By Meenu with <i><b>The Forge</b></i>! 
+                      Find the best deals on WardrobeNByMeenu with <i><b>The Forge</b></i>! 
                     </p>
                     <p>
                       Compare prices instantly and grab your favorite styles at the lowest rates!
@@ -195,7 +189,7 @@
                         View Deals
                       </a>
                       <a href="https://www.wardrobebymeenu.com/" class="btn-2" target="_blank">
-                        Go to Wardrobebymeenu
+                        Go to WardrobeByMeenu
                       </a>
                     </div>
                   </div>
@@ -564,13 +558,13 @@
                   <a class="" href="about.html">About </a>
                 </li>
                 <li class="">
-                  <a class="" href="Saashe.html">Saashe Products </a>
+                  <a class="" href="saashe.html">Saashe Products </a>
                 </li>
                 <li class="">
-                  <a class="" href="WardrobeByMeenu .html">WardrobeByMeenu Products </a>
+                  <a class="" href="wardrobebymeenu.html">WardrobebByMeenu Products </a>
                 </li>
                 <li class="">
-                  <a class="" href="WardrobeByMeenu .html">Compare prices </a>
+                  <a class="" href="wardrobebymeenu.html">Compare prices </a>
                 </li>
               </ul>
             </div>
@@ -583,7 +577,7 @@
               Saashe
             </p>
             <p>
-              WardrobeByMeenu 
+              WardrobeByMeenu
             </p>
           </div>
 
