--- a/spering-html/index.html
+++ b/spering-html/index.html
@@ -146,7 +146,7 @@
                       on Myntra <br>
                     </h1>
                     <p>
-                      Find the best deals on Myntra with <i><b>The Forge</b></i>! 
+                      Find the best deals on Saashe with <i><b>The Forge</b></i>! 
                     </p>
                     <p>
                       Compare prices instantly and grab your favorite styles at the lowest rates!
@@ -156,7 +156,7 @@
                         View Deals
                       </a>
                       <a href="https://www.saashe.com/" class="btn-2" target="_blank">
-                        Go to Myntra
+                        Go to Saashe
                       </a>
                     </div>
                   </div>
