--- a/spering-html/index.html
+++ b/spering-html/index.html
@@ -143,7 +143,7 @@
                   <div class="detail-box">
                     <h1>
                       Best Deals <br>
-                      on Myntra <br>
+                      on Saashe <br>
                     </h1>
                     <p>
                       Find the best deals on Saashe with <i><b>The Forge</b></i>! 
